# dse-static-oai-pmh

./: .flake8  Dockerfile  README.md  build_and_run.sh  pyproject.toml  requirements.txt  requirements_dev.txt  requirments.txt
.github/workflows/: build.yml  lint.yml  starter.yaml  test.yml
app/: config.py  main.py  tests.py
tests/: test_main.py
