[project]
name = "dse-static-oai-pmh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "acdh-tei-pyutils>=2.3.0",
    "fastapi-cache2>=0.2.2",
    "fastapi[all]>=0.135.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=8.4.0",
    "ruff>=0.15.6",
]
